<resources>
    <string name="app_name">behance</string>
    <string name="for_images">image</string>
    <string name="under_first">Let\'s Make Some Fan Art in Illustrator</string>
    <string name="under_second">VFXmas - Cartoons in Footage</string>
    <string name="under_third">Motion Designing | Natalie A Palumbo</string>
    <string name="under_4">Shilin - inking a comic page</string>
    <string name="under_5">Portrait Study in Adobe Fresco with Anika Aggarwal</string>
    <string name="graphic_design">Graphic Design</string>
    <string name="photography">Photography</string>
    <string name="ui_ux1">UI/UX</string>
    <string name="fresco">Fresco</string>
    <string name="photoshop">Photoshop</string>
    <string name="motion">Motion</string>
    <string name="illustration">Illustration</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="tranlation">tranlation</string>
    <string name="notifications">notifications</string>
    <string name="profile">profile</string>
    <string name="photoshop_daily_creative_challenge_welcome">Photoshop Daily Creative Challenge - Welcome</string>
    <string name="n_text_live">Illustrator Daily Creative Challenge - Welcome</string>
    <string name="profile1">profile!</string>
    <string name="work">Работы</string>
    <string name="info">Инфо</string>
    <string name="grates">Оценки</string>
    <string name="_0_n">0 \n Просмотры проекта</string>
    <string name="settings_text">Настройки</string>
    <string name="red_button_text">Присоединяйтесь и общайтесь</string>
    <string name="putin">Батя</string>
    <string name="garge_project">Оцените свой первый проект</string>
    <string name="like_project">Проекты, которые вам понравились, перечислены здесь</string>
    <string name="kesh">Очистить кэш</string>
    <string name="feedbacl">Отправить отчёт</string>
    <string name="notification">Уведомления</string>
    <string name="auto_save">Автосохрание в галерею</string>
    <string name="general">Основные</string>
    <string name="geo">Расположение</string>
    <string name="grates_b">0 \n Оценки</string>
    <string name="followers">0 \n Подписки</string>
    <string name="followerss">0 \n Подписчики</string>
    <string name="geo_kyr">Kyrgyzstan</string>
    <string name="create_own">Создайте первый проект</string>
    <string name="get_feedback">Получайте отзывы, просмотры и оценки. Общедоступные проекты также могут быть отмечены как популярные нашими кураторами</string>
    <string name="add">Добавить</string>
    <string name="adobe_live">Adobe live</string>
    <string name="jack">Jack Watson</string>
    <string name="sarah">Sarah…</string>
    <string name="graphic">#Graphic…</string>
    <string name="odari_yo">Odari Yo…</string>
    <string name="change">Изменить порядок</string>
    <string name="create">Создать проект</string>
    <string name="add_instr">Добавтье содержимое в проект, используя инструменты ниже</string>
    <string name="best1">Лучшее</string>
    <string name="further">Далее</string>
    <string name="best">Лучшее</string>
    <string name="photo">Фотография</string>
    <string name="ui_ux">UI/UX</string>
    <string name="archi">Архитектура</string>
    <string name="grap">Графический дизайн</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>