<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_info">

    <ImageView
        android:contentDescription="@string/for_images"
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="140sp"
        android:src="@drawable/rectangle_27ploshad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:contentDescription="@string/for_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse_5putin"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:contentDescription="@string/for_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp"
        android:background="@drawable/vectorsettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:contentDescription="@string/for_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="12sp"
        android:background="@drawable/group_24others"
        app:layout_constraintEnd_toEndOf="@id/imageView4"
        app:layout_constraintTop_toTopOf="@id/imageView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/putin"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/vector__4_"
        android:contentDescription="@string/for_images"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/imageButton11" />


    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@drawable/vector__5_"
        android:contentDescription="@string/for_images"
        app:layout_constraintEnd_toStartOf="@+id/imageButton12"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/vector__6_"
        android:contentDescription="@string/for_images"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/imageButton11" />

    <Button
        android:id="@+id/button"
        android:layout_width="110sp"
        android:layout_height="40sp"
        android:background="@drawable/rectangle_5black_button"
        android:backgroundTint="@color/white"
        android:text="@string/work"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11" />

    <Button
        android:id="@+id/button2"
        android:layout_width="110sp"
        android:layout_height="40sp"
        android:background="@drawable/rectangle_5black_button"
        android:backgroundTint="@color/black"
        android:text="@string/info"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/imageButton12"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11" />

    <Button
        android:id="@+id/button3"
        android:layout_width="110sp"
        android:layout_height="40sp"
        android:background="@drawable/rectangle_5black_button"
        android:backgroundTint="@color/white"
        android:text="@string/grates"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11" />



    <ImageView
        android:contentDescription="@string/for_images"
        android:id="@+id/imageView8"
        android:layout_width="9dp"
        android:layout_height="10dp"
        android:layout_marginStart="40sp"
        android:layout_marginBottom="40sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/geo" />

    <TextView
        android:id="@+id/textView12"
        style="@style/for_medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:text="@string/geo_kyr"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        style="@style/for_medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:text="@string/geo"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12" />

    <ImageView
        android:contentDescription="@string/for_images"
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/rectangle_29button_view" />

    <TextView
        android:id="@+id/textView15"
        style="@style/for_medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_0_n"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/for_images"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toEndOf="@+id/imageButton12"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:srcCompat="@drawable/rectangle_29button_view" />

    <TextView
        android:id="@+id/textView16"
        style="@style/for_medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/grates_b"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:contentDescription="@string/for_images"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/rectangle_29button_view" />

    <TextView
        android:id="@+id/textView17"
        style="@style/for_medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/followers"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <ImageView
        android:contentDescription="@string/for_images"
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/rectangle_29button_view" />

    <TextView
        android:id="@+id/textView18"
        style="@style/for_medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/followerss"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11" />

</androidx.constraintlayout.widget.ConstraintLayout>