<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivityPfofile">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="140sp"
        android:contentDescription="@string/for_images"
        android:src="@drawable/rectangle_27ploshad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/for_images"
        android:src="@drawable/ellipse_5putin"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp"
        android:background="@drawable/vectorsettings"
        android:contentDescription="@string/for_images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="12sp"
        android:background="@drawable/group_24others"
        android:contentDescription="@string/for_images"
        app:layout_constraintEnd_toEndOf="@id/imageView4"
        app:layout_constraintTop_toTopOf="@id/imageView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/putin"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/vector__4_"
        android:contentDescription="@string/for_images"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/imageButton11" />


    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@drawable/vector__5_"
        android:contentDescription="@string/for_images"
        app:layout_constraintEnd_toStartOf="@+id/imageButton12"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/vector__6_"
        android:contentDescription="@string/for_images"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/imageButton11" />

    <Button
        android:id="@+id/button"
        android:layout_width="110sp"
        android:layout_height="40sp"
        android:background="@drawable/rectangle_5black_button"
        android:backgroundTint="@color/black"
        android:text="@string/work"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11" />

    <Button
        android:id="@+id/button2"
        android:layout_width="110sp"
        android:layout_height="40sp"
        android:background="@drawable/rectangle_5black_button"
        android:backgroundTint="@color/white"
        android:text="@string/info"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageButton12"
        app:layout_constraintStart_toStartOf="@+id/imageButton10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11" />

    <Button
        android:id="@+id/button3"
        android:layout_width="110sp"
        android:layout_height="40sp"
        android:background="@drawable/rectangle_5black_button"
        android:backgroundTint="@color/white"
        android:text="@string/grates"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11" />




    <TextView
        android:id="@+id/some_id"
        style="@style/for_medium_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/create_own"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/for_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/group_26plus" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="350sp"
        android:layout_height="100sp"
        android:gravity="center"
        android:text="@string/get_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id" />


</androidx.constraintlayout.widget.ConstraintLayout>