<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityScroll">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22sp"
                android:layout_marginTop="14sp"
                android:contentDescription="@string/for_images"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/camera" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/for_images"
                app:layout_constraintBottom_toBottomOf="@+id/imageView17"
                app:layout_constraintEnd_toEndOf="@+id/imageView17"
                app:layout_constraintStart_toStartOf="@+id/imageView17"
                app:layout_constraintTop_toTopOf="@+id/imageView17"
                app:srcCompat="@drawable/circle" />

            <ImageView
                android:id="@+id/imageView23"
                style="@style/for_story"
                android:contentDescription="@string/for_images"
                app:layout_constraintBottom_toBottomOf="@+id/imageView17"
                app:layout_constraintStart_toEndOf="@+id/imageView22"
                app:layout_constraintTop_toTopOf="@+id/imageView22"
                app:srcCompat="@drawable/adobe_live_image" />

            <ImageButton
                android:id="@+id/imageView26"
                style="@style/for_story"
                android:contentDescription="@string/for_images"
                android:src="@drawable/vectorgraphic_"
                app:layout_constraintBottom_toBottomOf="@+id/imageView23"
                app:layout_constraintStart_toEndOf="@+id/imageView23"
                app:layout_constraintTop_toTopOf="@+id/imageView23" />

            <ImageButton
                android:id="@+id/imageButton13"
                style="@style/for_story"
                android:contentDescription="@string/for_images"
                android:src="@drawable/vectorjack_watson"
                app:layout_constraintBottom_toBottomOf="@+id/imageView26"
                app:layout_constraintStart_toEndOf="@+id/imageView26"
                app:layout_constraintTop_toTopOf="@+id/imageView26" />

            <ImageButton
                android:id="@+id/imageButton14"
                style="@style/for_story"
                android:contentDescription="@string/for_images"
                android:src="@drawable/vectoredori"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton13"
                app:layout_constraintStart_toEndOf="@+id/imageButton13"
                app:layout_constraintTop_toTopOf="@+id/imageButton13" />

            <ImageButton
                android:id="@+id/imageButton15"
                style="@style/for_story"
                android:contentDescription="@string/for_images"
                android:src="@drawable/vectorsarah"
                app:layout_constraintBottom_toBottomOf="@+id/imageButton14"
                app:layout_constraintStart_toEndOf="@+id/imageButton14"
                app:layout_constraintTop_toTopOf="@+id/imageButton14" />

            <TextView
                android:id="@+id/textView20"
                style="@style/text_story"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="@+id/imageView17"
                app:layout_constraintStart_toStartOf="@+id/imageView17"
                app:layout_constraintTop_toBottomOf="@+id/imageView17" />

            <TextView
                android:id="@+id/textView25"
                style="@style/text_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adobe_live"
                app:layout_constraintEnd_toEndOf="@+id/imageView23"
                app:layout_constraintStart_toStartOf="@+id/imageView23"
                app:layout_constraintTop_toBottomOf="@+id/imageView23" />

            <TextView
                android:id="@+id/textView26"
                style="@style/text_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graphic"
                app:layout_constraintEnd_toEndOf="@+id/imageView26"
                app:layout_constraintStart_toStartOf="@+id/imageView26"
                app:layout_constraintTop_toBottomOf="@+id/imageView26" />

            <TextView
                android:id="@+id/textView27"
                style="@style/text_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jack"
                app:layout_constraintEnd_toEndOf="@+id/imageButton13"
                app:layout_constraintStart_toStartOf="@+id/imageButton13"
                app:layout_constraintTop_toBottomOf="@+id/imageButton13" />

            <TextView
                android:id="@+id/textView28"
                style="@style/text_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odari_yo"
                app:layout_constraintEnd_toEndOf="@+id/imageButton14"
                app:layout_constraintStart_toStartOf="@+id/imageButton14"
                app:layout_constraintTop_toBottomOf="@+id/imageButton14" />

            <TextView
                android:id="@+id/textView29"
                style="@style/text_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sarah"
                app:layout_constraintEnd_toEndOf="@+id/imageButton15"
                app:layout_constraintStart_toStartOf="@+id/imageButton14"
                app:layout_constraintTop_toBottomOf="@+id/imageButton15" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        style="@style/for_nav_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>